@@ -27,6 +27,7 @@ subprojects {
     tasks {
         withType<JavaCompile> {
             options.compilerArgs.add("--enable-preview")
+            options.forkOptions.jvmArgs!!.add("--enable-preview")
         }
         withType<Test>() {
             jvmArgs("--enable-preview")
